[gd_scene load_steps=9 format=3 uid="uid://yonx6jdmd008"]

[ext_resource type="Script" path="res://CarEngineSound.gd" id="1_71pax"]
[ext_resource type="AudioStream" uid="uid://3qyurfdjlin" path="res://Engine Sound/enginge-idle.wav" id="2_5nb4o"]
[ext_resource type="AudioStream" uid="uid://uobfgrtxmket" path="res://Engine Sound/enginge-gear1.wav" id="3_0k3bo"]
[ext_resource type="AudioStream" uid="uid://dr4upmt76g5sn" path="res://Engine Sound/enginge-gear2.wav" id="4_uc03k"]
[ext_resource type="AudioStream" uid="uid://b8uvxgbj2ilae" path="res://Engine Sound/enginge-gear3.wav" id="5_msmfa"]
[ext_resource type="AudioStream" uid="uid://cmv44jtjt2imj" path="res://Engine Sound/enginge-gear4.wav" id="6_8dasw"]
[ext_resource type="AudioStream" uid="uid://dj7g1r0q8liox" path="res://Engine Sound/enginge-gear5.wav" id="7_4uctg"]
[ext_resource type="AudioStream" uid="uid://cunkq1ikggm86" path="res://Engine Sound/enginge-gear6.wav" id="8_ds321"]

[node name="CarEngineSound" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739014, 1.68405)
script = ExtResource("1_71pax")
GEAR_SHIFT_PULLBACK = 0.5
GEAR_SHIFT_SPEED = 0.03
PITCH_HARSHNESS = 0.8
GEAR_SHIFT_COOLDOWN_DEFAULT = 0.0

[node name="Idle" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_5nb4o")
bus = &"Engine Sound"

[node name="Gear1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_0k3bo")
pitch_scale = 1.74
bus = &"Engine Sound"

[node name="Gear2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_uc03k")
bus = &"Engine Sound"

[node name="Gear3" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_msmfa")
bus = &"Engine Sound"

[node name="Gear4" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_8dasw")
bus = &"Engine Sound"

[node name="Gear5" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_4uctg")
bus = &"Engine Sound"

[node name="Gear6" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_ds321")
bus = &"Engine Sound"
